# page-clutter-compositor

./: .gitignore  configure.ac
src/: Makefile.am  config_handler.cxx  config_handler.hxx  main.cxx  page-core.cxx  page-core.hxx  page-default-keyboard-grab.cxx  page-default-keyboard-grab.hxx  page-default-pointer-grab.cxx  page-default-pointer-grab.hxx  page-keyboard-grab.hxx  page-keyboard.cxx  page-keyboard.hxx  page-output.cxx  page-pointer-grab.cxx  page-pointer-grab.hxx  page-pointer.cxx  page-pointer.hxx  page-seat.cxx  page-seat.hxx  page-touch.hxx  page-types.hxx  page.cxx  page.hxx  signals.hxx  utils.cxx  utils.hxx
src/core/: page-core.cxx  page-core.hxx  page-default-keyboard-grab.hxx  page-default-pointer-grab.cxx  page-default-pointer-grab.hxx  page-keyboard-grab.cxx  page-keyboard.cxx  page-keyboard.hxx  page-output.hxx  page-pointer.cxx  page-pointer.hxx  page-seat.cxx  page-seat.hxx  page-types.hxx
src/libpage/: page-default-keyboard-grab.cxx  page-default-pointer-grab.cxx  page-output.cxx  page-pointer.hxx  page-seat.hxx  page-touch.cxx  utils.cxx  utils.hxx  wl-listener.hxx
src/meta/: README  meta-cullable.c  meta-shaped-texture-private.h  meta-shaped-texture.c  meta-surface-actor-wayland.cxx  meta-surface-actor-wayland.hxx  meta-surface-actor.c  meta-surface-actor.h  meta-texture-rectangle.c  region-utils.h  window.h
src/page/: compositor_overlay.hxx  config.hxx  config_handler.cxx  default-keyboard-grab.cxx  default-keyboard-grab.hxx  default-pointer-grab.cxx  default-pointer-grab.hxx  dropdown_menu.hxx  exception.hxx  grab_handlers.cxx  grab_handlers.hxx  key_desc.cxx  key_desc.hxx  listener.hxx  mainloop.hxx  notebook.cxx  notebook.hxx  page.cxx  page.hxx  page_component.hxx  page_context.hxx  page_event.hxx  page_root.cxx  page_root.hxx  pixmap.cxx  pixmap.hxx  popup_alt_tab.cxx  popup_alt_tab.hxx  popup_notebook0.hxx  popup_split.hxx  region.hxx  renderable_floating_outer_gradien.hxx  renderable_notebook_fading.hxx  renderable_pixmap.hxx  renderable_solid.hxx  renderable_thumbnail.hxx  simple2_theme.cxx  simple2_theme.hxx  split.cxx  split.hxx  (+18 more)
src/sh/: sh-types.hxx  xdg-v5-popup.cxx  xdg-v5-popup.hxx  xdg-v5-shell.cxx  xdg-v5-shell.hxx  xdg-v5-surface.cxx  xdg-v5-surface.hxx  xdg-v6-popup.cxx  xdg-v6-popup.hxx  xdg-v6-positioner.cxx  xdg-v6-positioner.hxx  xdg-v6-shell.cxx  xdg-v6-shell.hxx  xdg-v6-surface.cxx  xdg-v6-surface.hxx  xdg-v6-toplevel.cxx  xdg-v6-toplevel.hxx
src/utils/: config_handler.cxx  exception.hxx  signals.hxx  utils.cxx  utils.hxx  wl-listener.hxx
src/wl/: wl-buffer.cxx  wl-buffer.hxx  wl-callback.cxx  wl-callback.hxx  wl-compositor.cxx  wl-compositor.hxx  wl-data-device-manager.cxx  wl-data-device-manager.hxx  wl-data-device.cxx  wl-data-device.hxx  wl-keyboard.cxx  wl-keyboard.hxx  wl-output.cxx  wl-output.hxx  wl-pointer.cxx  wl-pointer.hxx  wl-region.cxx  wl-region.hxx  wl-seat.cxx  wl-seat.hxx  wl-shell-surface.cxx  wl-shell-surface.hxx  wl-shell.cxx  wl-shell.hxx  wl-subcompositor.cxx  wl-subcompositor.hxx  wl-subsurface.cxx  wl-subsurface.hxx  wl-surface-state.cxx  wl-surface-state.hxx  wl-surface.cxx  wl-surface.hxx  wl-touch.cxx  wl-touch.hxx  wl-types.hxx
tools/: wayland-cxx-scanner.py
